# c_mmorpg_base

./: .gitignore  CHANGES.md  CLIENT_MODULES.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  Info-theos.plist  Info.plist  LOCALIZATION.md  Makefile  Makefile.theos  NVIDIA_PRIME_TEST.md  PASSWORD_CHANGE_FEATURE.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  THEOS_BUILD_GUIDE.md  THEOS_QUICK_START.md  VULKAN.md  build.sh  build_ios.sh  build_mac.sh  build_win.bat  build_win.sh  client.h  client_audio.c  client_config.c  client_input.c  client_network.c  client_sdl.c  client_utils.c  common.h  control  ios_file_picker.m  localization.c  localization.h  mmorpg.db  profiles.txt  renderer_vulkan.c  renderer_vulkan.h  server.c  triggers.txt
android/: .gitignore  BUILD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  QUICK_START.md  README.md  gradlew  settings.gradle  setup.sh
android/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: MISSING_ASSETS.md  create_placeholders.sh  triggers.txt
android/app/src/main/java/com/mmo/client/: MainActivity.java
android/app/src/main/java/org/libsdl/app/: README.md  SDLActivity.java
android/app/src/main/jniLibs/: README.md
android/app/src/main/jniLibs/x86_64/: README.md
android/app/src/main/res/values/: strings.xml  styles.xml
android/app/src/main/res/values-v28/: styles.xml
mmotest.xcodeproj/: project.pbxproj
mmotest.xcodeproj/project.xcworkspace/xcuserdata/hallt.xcuserdatad/: UserInterfaceState.xcuserstate
mmotest.xcodeproj/xcuserdata/hallt.xcuserdatad/xcschemes/: xcschememanagement.plist
